# pvr.iptvsimple

./: .gitignore  .travis.yml  CMakeLists.txt  FindRapidxml.cmake  Findlzma.cmake  Findpugixml.cmake  Jenkinsfile  Makefile.am  README.md  appveyor.yml  azure-pipelines.yml  build-install-mac.sh
.github/workflows/: build.yml  changelog-and-release.yml  increment-version.yml  release.yml  sync-addon-metadata-translations.yml
addon/: addon.xml.in  changelog.txt
addon/resources/: settings.xml
addon/resources/language/Afrikaans/: strings.po
addon/resources/language/Albanian/: strings.po
addon/resources/language/Amharic/: strings.po
addon/resources/language/Arabic/: strings.po
addon/resources/language/Armenian/: strings.po
addon/resources/language/Basque/: strings.po
addon/resources/language/Belarusian/: strings.po
addon/resources/language/Bosnian/: strings.po
addon/resources/language/Bulgarian/: strings.po
addon/resources/language/Burmese/: strings.po
addon/resources/language/Catalan/: strings.po
addon/resources/language/Chinese (Simple)/: strings.po
addon/resources/language/Chinese (Traditional)/: strings.po
addon/resources/language/Croatian/: strings.po
addon/resources/language/Czech/: strings.po
addon/resources/language/Danish/: strings.po
addon/resources/language/Dutch/: strings.po
addon/resources/language/English/: strings.po
addon/resources/language/English (Australia)/: strings.po
addon/resources/language/English (New Zealand)/: strings.po
addon/resources/language/English (US)/: strings.po
addon/resources/language/Esperanto/: strings.po
addon/resources/language/Estonian/: strings.po
addon/resources/language/Faroese/: strings.po
addon/resources/language/Filipino/: strings.po
addon/resources/language/Finnish/: strings.po
addon/resources/language/French/: strings.po
addon/resources/language/French (Canada)/: strings.po
addon/resources/language/Galician/: strings.po
addon/resources/language/Georgian/: strings.po
addon/resources/language/German/: strings.po
addon/resources/language/Greek/: strings.po
addon/resources/language/Hebrew/: strings.po
addon/resources/language/Hindi (Devanagiri)/: strings.po
addon/resources/language/Hungarian/: strings.po
addon/resources/language/Icelandic/: strings.po
addon/resources/language/Indonesian/: strings.po
addon/resources/language/Italian/: strings.po
addon/resources/language/Japanese/: strings.po
addon/resources/language/Korean/: strings.po
addon/resources/language/Latvian/: strings.po
addon/resources/language/Lithuanian/: strings.po
addon/resources/language/Macedonian/: strings.po
debian/: changelog  changelog.in  control  copyright  kodi-pvr-iptvsimple.install  rules
depends/common/openssl/: 01-android.patch  02-android-standalone-toolchain.patch  03-android-cc.patch  CMakeLists.txt  openssl.txt
depends/common/pugixml/: pugixml.sha256  pugixml.txt
depends/common/rapidxml/: 01-fix-windows.patch  CMakeLists.txt  rapidxml.sha256
depends/common/xz-utils/: 01-enable-uwp-builds.patch  CMakeLists.txt  flags.txt  xz-utils.sha256  xz-utils.txt
depends/common/zlib/: 01-build-static.patch  02-disable-example-binaries.patch  03-install-pkgconfig-in-lib.patch  CMakeLists.txt  zlib.sha256  zlib.txt
depends/windows/openssl/: 01-quote-cc.patch  CMakeLists.txt  deps.txt  openssl.sha256
depends/windows/rapidxml/: 01-fix-windows.patch  rapidxml.txt
depends/windows/strawberryperl/: CMakeLists.txt  strawberryperl.sha256  strawberryperl.txt
depends/windows/xz-utils/: CMakeLists.txt  xz-utils.sha256  xz-utils.txt
depends/windowsstore/openssl/: CMakeLists.txt
depends/windowsstore/xz-utils/: 01-add-xz-config.cmake.patch  CMakeLists.txt  xz-utils.sha256  xz-utils.txt
lib/rapidxml/: rapidxml.hpp  rapidxml_iterators.hpp
project/VS2010Express/: pvr.iptvsimple.vcxproj  pvr.iptvsimple.vcxproj.filters
pvr.iptvsimple/: addon.xml  addon.xml.in  changelog.txt
pvr.iptvsimple/resources/: gensettings.sh  instance-settings.xml  settings.xml
pvr.iptvsimple/resources/data/: genres.xml
src/: IStreamReader.h  IptvSimple.cpp  IptvSimple.h  LocalizedString.h  PVRIptvData.cpp  PVRIptvData.h  PVRPlayList.cpp  PVRPlayList.h  PVRRECNamespace.h  PVRRecJob.cpp  PVRRecJob.h  PVRRecorder.cpp  PVRRecorder.h  PVRRecorderThread.cpp  PVRRecorderThread.h  PVRSchedulerThread.cpp  PVRSchedulerThread.h  PVRSimpleRecorder.cpp  PVRSimpleRecorder.h  PVRUtils.cpp  PVRUtils.h  StreamReader.cpp  StreamReader.h  TimeshiftBuffer.cpp  TimeshiftBuffer.h  addon.cpp  addon.h  client.cpp  client.h
src/iptvsimple/: AddonSettings.cpp  AddonSettings.h  CatchupController.cpp  CatchupController.h  ChannelGroups.cpp  ChannelGroups.h  Channels.cpp  Channels.h  ConnectionManager.cpp  ConnectionManager.h  Epg.cpp  Epg.h  FileStreamReader.cpp  FileStreamReader.h  IConnectionListener.h  IStreamReader.h  InstanceSettings.cpp  InstanceSettings.h  LocalizedString.h  M3U8Streamer.cpp  M3U8Streamer.h  Media.cpp  Media.h  PlaylistLoader.cpp  PlaylistLoader.h  Providers.cpp  Providers.h  Settings.cpp  Settings.h  StreamManager.cpp  StreamManager.h  StreamReader.cpp  StreamReader.h  TimeshiftBuffer.cpp  TimeshiftBuffer.h
src/iptvsimple/data/: BaseEntry.h  Channel.cpp  Channel.h  ChannelEpg.cpp  ChannelEpg.h  ChannelGroup.cpp  ChannelGroup.h  EpgEntry.cpp  EpgEntry.h  EpgGenre.cpp  EpgGenre.h  MediaEntry.cpp  MediaEntry.h  Provider.cpp  Provider.h  StreamEntry.h
src/iptvsimple/hls/: HlsDownloader.cpp  HlsDownloader.h  HlsParser.cpp  HlsParser.h  HlsUpdater.cpp  HlsUpdater.h
src/iptvsimple/utilities/: FileUtils.cpp  FileUtils.h  Logger.cpp  Logger.h  SettingsMigration.cpp  SettingsMigration.h  StreamUtils.cpp  StreamUtils.h  StringUtils.cpp  StringUtils.h  TimeUtils.h  WebUtils.cpp  WebUtils.h  XMLUtils.h
src/libexecstream/: exec-stream.cpp  exec-stream.h
src/libexecstream/doc/: index.html  libexecstream.css  license.html  news.html  reference.html
src/libexecstream/posix/: exec-stream-helpers.cpp  exec-stream-impl.cpp
src/libexecstream/test/: Makefile.gcc  Makefile.msvc  exec-stream-test.cpp
(+187 files in other folders)
